[package]
name = "cradoc"
version = "0.1.0"
edition = "2024"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/cradoc"
description = "utility keeping your readme up to date with the lib"
keywords = ["readme", "crate", "doc"]
license = "MIT"
categories = ["command-line-utilities"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
cargo_metadata = "0.23"
clap = { version = "4.5", features = ["derive", "cargo"] }
clap-help = "1.5"
cli-log = "2.1"
lazy-regex = "3.4"
rustc-hash = "2"
rustdoc-types = "0.56.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.34"
thiserror = "2"
scraper = "0.24"
